# brotherhoods-app-backend

./: .envsample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  docker-compose.yml  mypy.ini  pre-commit.yml  pyproject.toml  pytest.ini  ruff.toml
app_platform/: apps.py  models.py  urls.py  utils.py  views.py
app_platform/api/: serializers.py  viewsets.py
app_platform/api/v1/: routers.py  serializers.py  viewsets.py
app_platform/migrations/: 0001_initial.py  0002_alter_playerbill_payed_value_playervisits.py
app_platform/models/: __init__.py  game.py  player.py
app_platform/repositories/: game_repository.py  generic_repository.py
app_platform/services/: game.py  game_service.py  player_service.py
app_platform/tests/mixins/: auth_mixin.py
app_platform/tests/viewsets/: test_player.py
app_platform/types/: auth.py
authentication/: admin.py  types.py
authentication/api/: viewsets.py
authentication/tests/mixins/: auth_mixin.py
authentication/tests/viewsets/: test_player.py
core/: asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  models.py  services.py  types.py  urls.py
games/api/: routes.py  serializers.py  viewsets.py
games/migrations/: 0001_initial.py  0002_game_deleted.py  0003_game_deleted_at.py  0004_alter_game_deleted_at.py
games/tests/mixins/: game_mixins.py
games/tests/models/: test_game_model.py
games/tests/viewsets/: test_games_viewset.py
players/: admin.py  models.py  services.py  urls.py
players/api/: routes.py  serializers.py  viewsets.py
players/api/viewsets/: __init__.py  player_bills_viewset.py  player_games_viewset.py  player_viewset.py
players/migrations/: 0001_initial.py  0002_player_deleted_playerbill_deleted_and_more.py  0003_player_deleted_at_playerbill_deleted_at_and_more.py  0004_player_birth_date_player_email_and_more.py  0005_rename_playerbill_playerbills.py  0006_alter_playerbills_payed_date.py
players/tests/: test_player_viewset.py
players/tests/mixins/: player_mixins.py
players/tests/models/: test_player_models.py
players/tests/viewsets/: test_player.py  test_player_viewset.py  test_pĺayer_bills_viewset.py
project/: settings.py  urls.py
project/api/viewsets/: base_viewsets.py  user_viewsets.py
project/tests/mixins/: auth_mixin.py
utils/: models.py  time.py
utils/database/: manager.py  models.py  queryset.py  soft_delete.py
(+14 files in other folders)
