[tool.poetry]
name = "brotherhoods-backend"
version = "0.1.0"
description = ""
authors = ["macwdo <danilo.macedofernandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
django-rest-framework = "^0.1.0"
ipdb = "^0.13.13"
ruff = "^0.3.3"
mypy = "^1.9.0"
drf-nested-routers = "^0.93.5"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
