[tool.poetry]
name = "brotherhoods-backend"
version = "0.1.0"
description = ""
authors = ["macwdo <danilo.macedofernandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
django-rest-framework = "^0.1.0"
ipdb = "^0.13.13"
ruff = "^0.3.3"
drf-nested-routers = "^0.93.5"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
pydantic = "^2.6.4"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.mypy]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


